feat: add section__tariffs

--- a/index.html
+++ b/index.html
@@ -1232,6 +1232,87 @@
                 </div>
             </section>
             <!-- /Portfolio-->
+            <!-- Tariffs -->
+            <section class="section__tariffs mb">
+                <div class="container">
+                    <h2 class="title-secondary tariffs__title">Наш гибкий тарифный пла<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>н</h2>
+                    <div class="row mb-2rem">
+                        <div class="col-12 col-lg-6">
+                            <div class="tariff-card d-flex-between-start pos-relative gap-4">
+                                <div class="tariff-card__info d-flex flex-column gap-2">
+                                    <p class="title-quaternary">Разработка сайта турфирмы</p>
+                                    <p class="text-body">Создание профессиональных веб-сайтов с учетом специфики туристического бизнеса.</p>
+                                </div>
+                                <p class="tariff-card__price title-quaternary">от 70 000 ₽</p>
+                                <svg class="icon icon-dotted-line" width="100%" height="4">
+                                    <use href="/assets/icons/sprite.svg#icon-dotted-line"></use>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="tariff-card d-flex-between-start pos-relative gap-4">
+                                <div class="tariff-card__info d-flex flex-column gap-2">
+                                    <p class="title-quaternary">Разработка сайта туроператора</p>
+                                    <p class="text-body">Создание профессиональных веб-сайтов с учетом специфики туристического бизнеса.</p>
+                                </div>
+                                <p class="tariff-card__price title-quaternary">от 150 000₽</p>
+                                <svg class="icon icon-dotted-line" width="100%" height="4">
+                                    <use href="/assets/icons/sprite.svg#icon-dotted-line"></use>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="tariff-card d-flex-between-start pos-relative gap-4">
+                                <div class="tariff-card__info d-flex flex-column gap-2">
+                                    <p class="title-quaternary">Разработка сайта отеля</p>
+                                    <p class="text-body">Создание профессиональных веб-сайта с учетом специфики бизнеса.</p>
+                                </div>
+                                <p class="tariff-card__price title-quaternary">от 80 000 ₽</p>
+                                <svg class="icon icon-dotted-line" width="100%" height="4">
+                                    <use href="/assets/icons/sprite.svg#icon-dotted-line"></use>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="tariff-card d-flex-between-start pos-relative gap-4">
+                                <div class="tariff-card__info d-flex flex-column gap-2">
+                                    <p class="title-quaternary">Техническая поддержка</p>
+                                    <p class="text-body">Регулярное обновление, мониторинг работоспособности и защита сайта от угроз.</p>
+                                </div>
+                                <p class="tariff-card__price title-quaternary">от 20 000 ₽</p>
+                                <svg class="icon icon-dotted-line" width="100%" height="4">
+                                    <use href="/assets/icons/sprite.svg#icon-dotted-line"></use>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="tariff-card d-flex-between-start pos-relative gap-4">
+                                <div class="tariff-card__info d-flex flex-column gap-2">
+                                    <p class="title-quaternary">Продвижение сайта в Яндекс и Google</p>
+                                    <p class="text-body">Создание профессиональных веб-сайтов с учетом специфики туристического бизнеса.</p>
+                                </div>
+                                <p class="tariff-card__price title-quaternary">от 30 000 ₽</p>
+                                <svg class="icon icon-dotted-line" width="100%" height="4">
+                                    <use href="/assets/icons/sprite.svg#icon-dotted-line"></use>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="tariff-card d-flex-between-start pos-relative gap-4">
+                                <div class="tariff-card__info d-flex flex-column gap-2">
+                                    <p class="title-quaternary">Разработка фирменного стиля</p>
+                                    <p class="text-body">Создание профессиональных веб-сайтов с учетом специфики туристического бизнеса.</p>
+                                </div>
+                                <p class="tariff-card__price title-quaternary">от 15 000 ₽</p>
+                                <svg class="icon icon-dotted-line" width="100%" height="4">
+                                    <use href="/assets/icons/sprite.svg#icon-dotted-line"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- /Tariffs -->
         </main>
         <!-- /Main -->
 
