feat: add growCircle

--- a/index.html
+++ b/index.html
@@ -1232,19 +1232,30 @@
                 </div>
             </section>
             <!-- /Portfolio-->
+            <!-- Spacer -->
+            <section class="section__spacer mb" data-stop-at=".next-stop">
+                <div class="spacer-inner">
+                    <div class="spacer-inner__grow-circle"></div>
+                    <div class="spacer-inner__icon d-flex-center-center">
+                        <svg class="icon icon-spacer-arrow" width="24" height="24"><use href="/assets/icons/sprite.svg#icon-arrow"></use>
+                        </svg>
+                    </div>
+                </div>
+            </section>
+            <!-- /Spacer -->
             <!-- Tariffs -->
             <section class="section__tariffs mb">
                 <div class="container">
-                    <h2 class="title-secondary tariffs__title">Наш гибкий тарифный пла<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>н</h2>
+                    <h2 class="title-secondary tariffs__title spacer-fade-text">Наш гибкий тарифный пла<span class="title-end spacer-fade-text"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>н</h2>
                     <div class="row mb-2rem">
                         <div class="col-12 col-lg-6">
                             <div class="tariff-card d-flex-between-start pos-relative gap-4">
                                 <div class="tariff-card__info d-flex flex-column gap-2">
-                                    <p class="title-quaternary">Разработка сайта турфирмы</p>
-                                    <p class="text-body">Создание профессиональных веб-сайтов с учетом специфики туристического бизнеса.</p>
+                                    <p class="title-quaternary spacer-fade-text">Разработка сайта турфирмы</p>
+                                    <p class="text-body spacer-fade-text">Создание профессиональных веб-сайтов с учетом специфики туристического бизнеса.</p>
                                 </div>
                                 <p class="tariff-card__price title-quaternary">от 70 000 ₽</p>
-                                <svg class="icon icon-dotted-line" width="100%" height="4">
+                                <svg class="icon icon-dotted-line spacer-fade-svg" width="100%" height="4">
                                     <use href="/assets/icons/sprite.svg#icon-dotted-line"></use>
                                 </svg>
                             </div>
@@ -1252,11 +1263,11 @@
                         <div class="col-12 col-lg-6">
                             <div class="tariff-card d-flex-between-start pos-relative gap-4">
                                 <div class="tariff-card__info d-flex flex-column gap-2">
-                                    <p class="title-quaternary">Разработка сайта туроператора</p>
-                                    <p class="text-body">Создание профессиональных веб-сайтов с учетом специфики туристического бизнеса.</p>
+                                    <p class="title-quaternary spacer-fade-text">Разработка сайта туроператора</p>
+                                    <p class="text-body spacer-fade-text">Создание профессиональных веб-сайтов с учетом специфики туристического бизнеса.</p>
                                 </div>
                                 <p class="tariff-card__price title-quaternary">от 150 000₽</p>
-                                <svg class="icon icon-dotted-line" width="100%" height="4">
+                                <svg class="icon icon-dotted-line spacer-fade-svg" width="100%" height="4">
                                     <use href="/assets/icons/sprite.svg#icon-dotted-line"></use>
                                 </svg>
                             </div>
@@ -1264,11 +1275,11 @@
                         <div class="col-12 col-lg-6">
                             <div class="tariff-card d-flex-between-start pos-relative gap-4">
                                 <div class="tariff-card__info d-flex flex-column gap-2">
-                                    <p class="title-quaternary">Разработка сайта отеля</p>
-                                    <p class="text-body">Создание профессиональных веб-сайта с учетом специфики бизнеса.</p>
+                                    <p class="title-quaternary spacer-fade-text">Разработка сайта отеля</p>
+                                    <p class="text-body spacer-fade-text">Создание профессиональных веб-сайта с учетом специфики бизнеса.</p>
                                 </div>
                                 <p class="tariff-card__price title-quaternary">от 80 000 ₽</p>
-                                <svg class="icon icon-dotted-line" width="100%" height="4">
+                                <svg class="icon icon-dotted-line spacer-fade-svg" width="100%" height="4">
                                     <use href="/assets/icons/sprite.svg#icon-dotted-line"></use>
                                 </svg>
                             </div>
@@ -1276,11 +1287,11 @@
                         <div class="col-12 col-lg-6">
                             <div class="tariff-card d-flex-between-start pos-relative gap-4">
                                 <div class="tariff-card__info d-flex flex-column gap-2">
-                                    <p class="title-quaternary">Техническая поддержка</p>
-                                    <p class="text-body">Регулярное обновление, мониторинг работоспособности и защита сайта от угроз.</p>
+                                    <p class="title-quaternary spacer-fade-text">Техническая поддержка</p>
+                                    <p class="text-body spacer-fade-text">Регулярное обновление, мониторинг работоспособности и защита сайта от угроз.</p>
                                 </div>
                                 <p class="tariff-card__price title-quaternary">от 20 000 ₽</p>
-                                <svg class="icon icon-dotted-line" width="100%" height="4">
+                                <svg class="icon icon-dotted-line spacer-fade-svg" width="100%" height="4">
                                     <use href="/assets/icons/sprite.svg#icon-dotted-line"></use>
                                 </svg>
                             </div>
@@ -1288,11 +1299,11 @@
                         <div class="col-12 col-lg-6">
                             <div class="tariff-card d-flex-between-start pos-relative gap-4">
                                 <div class="tariff-card__info d-flex flex-column gap-2">
-                                    <p class="title-quaternary">Продвижение сайта в Яндекс и Google</p>
-                                    <p class="text-body">Создание профессиональных веб-сайтов с учетом специфики туристического бизнеса.</p>
+                                    <p class="title-quaternary spacer-fade-text">Продвижение сайта в Яндекс и Google</p>
+                                    <p class="text-body spacer-fade-text">Создание профессиональных веб-сайтов с учетом специфики туристического бизнеса.</p>
                                 </div>
                                 <p class="tariff-card__price title-quaternary">от 30 000 ₽</p>
-                                <svg class="icon icon-dotted-line" width="100%" height="4">
+                                <svg class="icon icon-dotted-line spacer-fade-svg" width="100%" height="4">
                                     <use href="/assets/icons/sprite.svg#icon-dotted-line"></use>
                                 </svg>
                             </div>
@@ -1300,11 +1311,11 @@
                         <div class="col-12 col-lg-6">
                             <div class="tariff-card d-flex-between-start pos-relative gap-4">
                                 <div class="tariff-card__info d-flex flex-column gap-2">
-                                    <p class="title-quaternary">Разработка фирменного стиля</p>
-                                    <p class="text-body">Создание профессиональных веб-сайтов с учетом специфики туристического бизнеса.</p>
+                                    <p class="title-quaternary spacer-fade-text">Разработка фирменного стиля</p>
+                                    <p class="text-body spacer-fade-text">Создание профессиональных веб-сайтов с учетом специфики туристического бизнеса.</p>
                                 </div>
                                 <p class="tariff-card__price title-quaternary">от 15 000 ₽</p>
-                                <svg class="icon icon-dotted-line" width="100%" height="4">
+                                <svg class="icon icon-dotted-line spacer-fade-svg" width="100%" height="4">
                                     <use href="/assets/icons/sprite.svg#icon-dotted-line"></use>
                                 </svg>
                             </div>
@@ -1313,6 +1324,11 @@
                 </div>
             </section>
             <!-- /Tariffs -->
+            <!-- Offices -->
+            <section class="section__offices mb next-stop">
+                <div class="container"></div>
+            </section>
+            <!-- /Offices -->
         </main>
         <!-- /Main -->
 
