feat: add offices__inner

--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,7 @@
             </section>
             <!-- /Portfolio-->
             <!-- Spacer -->
-            <section class="section__spacer mb" data-stop-at=".next-stop">
+            <section class="section__spacer mb">
                 <div class="spacer-inner">
                     <div class="spacer-inner__grow-circle"></div>
                     <div class="spacer-inner__icon d-flex-center-center">
@@ -1326,26 +1326,16 @@
             <!-- Offices -->
             <section class="section__offices mb">
                 <div class="container">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At aperiam expedita harum magni officiis omnis, minima voluptatum eum cum voluptate maxime eos molestiae ratione! Quod ducimus nostrum libero sequi enim?
-                    Commodi, nesciunt saepe asperiores nulla magni eius expedita omnis ut modi rem itaque odit distinctio error voluptatibus laudantium vel dolore libero inventore nam laboriosam! Quasi veniam doloribus consequatur. Dolore, nulla.
-                    Maiores, mollitia accusamus sunt at fugiat accusantium, neque eum id dolorum ab dolores totam? Rerum aliquid sint tenetur ipsam neque! Assumenda cupiditate error tenetur pariatur beatae libero, dolorum totam voluptas?
-                    Esse, nisi saepe! Accusantium libero nisi, adipisci sint sed vitae saepe eligendi rerum fugiat reiciendis nemo corporis. Similique consequatur unde quasi? Necessitatibus quia eveniet, distinctio ab consequatur officia accusamus dignissimos.
-                    Quidem vero cupiditate reiciendis voluptatum illo saepe suscipit eveniet explicabo laudantium exercitationem iusto, cum harum id ex similique porro odio rem quaerat incidunt! Beatae optio saepe cum sint fugit sequi.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis neque, modi dolorum, eveniet quae eligendi molestiae tempora asperiores ullam nihil pariatur dolores quis, tempore dignissimos libero facilis architecto consequatur saepe.
-                    Ipsam in non, placeat praesentium facere debitis nisi similique id deleniti veritatis illum autem et. Odio quidem, quam, facilis, magni amet eum tempore adipisci natus soluta repudiandae nesciunt eveniet ipsa!
-                    Soluta quo omnis ducimus. Quidem possimus impedit blanditiis magni nihil maiores veniam? Adipisci atque aliquid libero saepe, eligendi reprehenderit. Voluptatem, maxime molestias ab rerum asperiores iure consequatur aut temporibus omnis.
-                    Quidem laboriosam sit animi corporis harum vel ipsum, aspernatur ipsam impedit, tempora nemo dolore ex provident explicabo facere voluptatem molestiae minima! Blanditiis natus laborum eligendi voluptatibus, voluptatum optio voluptatem consequuntur!
-                    Debitis saepe obcaecati eligendi ab blanditiis explicabo dolor sint, natus dolorem vel provident in laborum at eaque aliquid labore. A adipisci laboriosam facere hic neque exercitationem nihil veritatis, recusandae suscipit?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At aperiam expedita harum magni officiis omnis, minima voluptatum eum cum voluptate maxime eos molestiae ratione! Quod ducimus nostrum libero sequi enim?
-                    Commodi, nesciunt saepe asperiores nulla magni eius expedita omnis ut modi rem itaque odit distinctio error voluptatibus laudantium vel dolore libero inventore nam laboriosam! Quasi veniam doloribus consequatur. Dolore, nulla.
-                    Maiores, mollitia accusamus sunt at fugiat accusantium, neque eum id dolorum ab dolores totam? Rerum aliquid sint tenetur ipsam neque! Assumenda cupiditate error tenetur pariatur beatae libero, dolorum totam voluptas?
-                    Esse, nisi saepe! Accusantium libero nisi, adipisci sint sed vitae saepe eligendi rerum fugiat reiciendis nemo corporis. Similique consequatur unde quasi? Necessitatibus quia eveniet, distinctio ab consequatur officia accusamus dignissimos.
-                    Quidem vero cupiditate reiciendis voluptatum illo saepe suscipit eveniet explicabo laudantium exercitationem iusto, cum harum id ex similique porro odio rem quaerat incidunt! Beatae optio saepe cum sint fugit sequi.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis neque, modi dolorum, eveniet quae eligendi molestiae tempora asperiores ullam nihil pariatur dolores quis, tempore dignissimos libero facilis architecto consequatur saepe.
-                    Ipsam in non, placeat praesentium facere debitis nisi similique id deleniti veritatis illum autem et. Odio quidem, quam, facilis, magni amet eum tempore adipisci natus soluta repudiandae nesciunt eveniet ipsa!
-                    Soluta quo omnis ducimus. Quidem possimus impedit blanditiis magni nihil maiores veniam? Adipisci atque aliquid libero saepe, eligendi reprehenderit. Voluptatem, maxime molestias ab rerum asperiores iure consequatur aut temporibus omnis.
-                    Quidem laboriosam sit animi corporis harum vel ipsum, aspernatur ipsam impedit, tempora nemo dolore ex provident explicabo facere voluptatem molestiae minima! Blanditiis natus laborum eligendi voluptatibus, voluptatum optio voluptatem consequuntur!
-                    Debitis saepe obcaecati eligendi ab blanditiis explicabo dolor sint, natus dolorem vel provident in laborum at eaque aliquid labore. A adipisci laboriosam facere hic neque exercitationem nihil veritatis, recusandae suscipit?</p>
+                    <div class="offices-clients__wrap d-flex-between-start flex-column gap-20-40">
+                        <div class="offices__inner d-flex-between-start">
+                            <div class="offices-info d-flex flex-column gap-20-40">
+                                <h2 class="title-secondary offices__title">Наши офисы и клиент<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>ы</h2>
+                                <p class="text-body offices__text-body">За 15 лет нашей работы нашими услугами воспользовались свыше 3000 компаний из 14 стран мира</p>
+                            </div>
+                            <img class="offices__map" src="/assets/images/map.png" alt="Карта">
+                        </div>
+                        <div class="clients-slider__inner"></div>
+                    </div>
                 </div>
             </section>
             <!-- /Offices -->
