fix: growCircle growing

--- a/index.html
+++ b/index.html
@@ -1243,7 +1243,7 @@
             </section>
             <!-- /Spacer -->
             <!-- Tariffs -->
-            <section class="section__tariffs mb">
+            <section class="section__tariffs">
                 <div class="container">
                     <h2 class="title-secondary tariffs__title spacer-fade-text">Наш гибкий тарифный пла<span class="title-end spacer-fade-text"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>н</h2>
                     <div class="row mb-2rem">
@@ -1320,6 +1320,7 @@
                             </div>
                         </div>
                     </div>
+                    <div class="stop-scale pos-relative"></div>
                 </div>
             </section>
             <!-- /Tariffs -->
@@ -1335,7 +1336,13 @@
                             <img class="offices__map" src="/assets/images/map.png" alt="Карта">
                         </div>
                         <div class="clients-slider__inner"></div>
+                    
                     </div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio ratione atque, molestiae consectetur minima eligendi quibusdam odio nostrum quisquam, at tempore ut quae incidunt doloribus earum temporibus harum impedit ullam.
+                At dicta odio illum perferendis, atque reiciendis placeat exercitationem ad esse nostrum est magnam, commodi delectus quam nulla nobis sint blanditiis distinctio inventore! Saepe eius ex eligendi itaque illum. Ea?
+                Voluptatum illo, minima temporibus repellat maiores recusandae veritatis sequi praesentium illum explicabo harum nulla eius saepe deleniti fugiat repellendus odit ipsum aspernatur dolorum sapiente nisi deserunt amet neque! Illum, praesentium.
+                Fugiat exercitationem voluptatem consectetur eaque possimus vero doloremque veritatis modi laboriosam nulla sequi praesentium nesciunt nobis obcaecati illo minus odit nam eum ducimus, ipsa, veniam harum alias corporis blanditiis! Possimus.
+                Quam ad possimus, assumenda molestias sed deserunt ratione aperiam sequi, minus ut, unde officia consectetur ipsam aliquid impedit fugiat libero nesciunt. Aliquid recusandae sapiente asperiores doloribus aperiam, maiores repudiandae accusantium?</p>
                 </div>
             </section>
             <!-- /Offices -->
