refactor: slider-top & clients-slider

--- a/index.html
+++ b/index.html
@@ -832,12 +832,12 @@
                 </div>
             </section>
             <!-- /About-->
-            <!-- Slider -->
+            <!-- Slider top -->
             <section class="slider bg-secondary">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-12">
-                            <div class="swiper-container">
+                            <div class="swiper-container slider-top">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
                                         <div class="row">
@@ -1038,21 +1038,21 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-button-prev d-md-flex no-tap-highlight">
+                        <div class="swiper-button-prev slider-top-prev d-flex-center-center no-tap-highlight">
                             <svg class="icon" width="32" height="32">
                                 <use
                                     href="/assets/icons/sprite.svg#icon-arrow"
                                 ></use>
                             </svg>
                         </div>
-                        <div class="swiper-button-next d-md-flex no-tap-highlight">
+                        <div class="swiper-button-next slider-top-next d-flex-center-center no-tap-highlight">
                             <svg class="icon" width="32" height="32">
                                 <use
                                     href="/assets/icons/sprite.svg#icon-arrow"
                                 ></use>
                             </svg>
                         </div>
-                        <div class="swiper-pagination no-tap-highlight"></div>
+                        <div class="swiper-pagination slider-top-pagination no-tap-highlight"></div>
                     </div>
                 </div>
             </section>
@@ -1328,21 +1328,38 @@
             <section class="section__offices mb">
                 <div class="container">
                     <div class="offices-clients__wrap d-flex-between-start flex-column gap-20-40">
-                        <div class="offices__inner d-flex-between-start">
-                            <div class="offices-info d-flex flex-column gap-20-40">
-                                <h2 class="title-secondary offices__title">Наши офисы и клиент<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>ы</h2>
-                                <p class="text-body offices__text-body">За 15 лет нашей работы нашими услугами воспользовались свыше 3000 компаний из 14 стран мира</p>
+                        <div class="row offices__inner gap-20-40">
+                            <div class="col-12 col-xxl-5">
+                                <div class="offices-info d-flex flex-column gap-20-40">
+                                    <h2 class="title-secondary offices__title">Наши офисы и клиент<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>ы</h2>
+                                    <p class="text-body offices__text-body">За 15 лет нашей работы нашими услугами воспользовались свыше 3000 компаний из 14 стран мира</p>
+                                </div>
                             </div>
-                            <img class="offices__map" src="/assets/images/map.png" alt="Карта">
+                            <div class="col-12 col-xxl-7"><img class="offices__map" src="/assets/images/map.png" alt="Карта"></div>
                         </div>
-                        <div class="clients-slider__inner"></div>
-                    
+                        <div class="container">
+                            <div class="clients-slider__inner">
+                                <div class="clients-slider__header pos-relative">
+                                    <div class="swiper-button-prev clients-slider-prev arrow-prev  d-flex-center-center no-tap-highlight">
+                                        <svg class="icon" width="32" height="32">
+                                            <use href="/assets/icons/sprite.svg#icon-arrow"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="swiper-button-next clients-slider-next arrow-next d-flex-center-center no-tap-highlight">
+                                    <svg class="icon" width="32" height="32">
+                                        <use href="/assets/icons/sprite.svg#icon-arrow"></use>
+                                    </svg>
+                                </div>
+                                <div class="swiper-container clients-swiper">
+                                    <div class="swiper-wrapper">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio ratione atque, molestiae consectetur minima eligendi quibusdam odio nostrum quisquam, at tempore ut quae incidunt doloribus earum temporibus harum impedit ullam.
-                At dicta odio illum perferendis, atque reiciendis placeat exercitationem ad esse nostrum est magnam, commodi delectus quam nulla nobis sint blanditiis distinctio inventore! Saepe eius ex eligendi itaque illum. Ea?
-                Voluptatum illo, minima temporibus repellat maiores recusandae veritatis sequi praesentium illum explicabo harum nulla eius saepe deleniti fugiat repellendus odit ipsum aspernatur dolorum sapiente nisi deserunt amet neque! Illum, praesentium.
-                Fugiat exercitationem voluptatem consectetur eaque possimus vero doloremque veritatis modi laboriosam nulla sequi praesentium nesciunt nobis obcaecati illo minus odit nam eum ducimus, ipsa, veniam harum alias corporis blanditiis! Possimus.
-                Quam ad possimus, assumenda molestias sed deserunt ratione aperiam sequi, minus ut, unde officia consectetur ipsam aliquid impedit fugiat libero nesciunt. Aliquid recusandae sapiente asperiores doloribus aperiam, maiores repudiandae accusantium?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ipsa ab rerum voluptatibus repudiandae iusto nostrum et unde. In illo, dolorum quos fuga molestias quasi modi vero est. Asperiores, accusantium!
+                    Provident odit quidem saepe et consequatur soluta, dignissimos veniam! Harum, quaerat nostrum voluptates hic impedit nemo deleniti beatae quibusdam animi, accusamus blanditiis id, atque recusandae? Eos quisquam pariatur officia aliquam.
+                    Inventore eos ex dolores eum nemo odio quaerat, asperiores ducimus et sint error officia deleniti soluta molestias! Necessitatibus esse velit, labore illo et laborum recusandae earum libero obcaecati, sunt aliquid.</p>
                 </div>
             </section>
             <!-- /Offices -->
